# mac-localized.py

./: README.md  setup.cfg
