[metadata]
name = mac-localized
version = 2018.11.19
url = https://github.com/looking-for-a-job/mac-localized.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = localization

[options]
install_requires = 
	public
	setuptools
	values
packages = 
	mac_localized
